📱 Novos ícones PWA apenas com logo circular
✨ Ícones PWA Atualizados:
- Extraído apenas o ícone circular (cruz + play) da logo
- Removido o texto 'ADVENTISTA PLAY' dos ícones
- Criados ícones em 8 tamanhos diferentes (72 a 512px)
- Favicon atualizado (32x32)
- Apple Touch Icon criado (180x180)

📦 Tamanhos disponíveis:
- 72x72, 96x96, 128x128, 144x144
- 152x152, 192x192, 384x384, 512x512

🎨 Características:
- Ícone circular verde/azul
- Cruz branca + símbolo play
- Fundo gradiente verde para azul
- Design limpo e moderno
- Perfeito para telas de celular

📄 Arquivos atualizados:
- manifest.json - Todos os ícones PWA
- index.html - Links para novos ícones
- favicon.ico - Ícone da aba do navegador
- apple-touch-icon.png - Ícone iOS

🎯 Resultado:
- Ícone profissional no home screen do celular
- Identidade visual consistente
- Melhor visualização em dispositivos móveis

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,49 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -35,42 +71,42 @@
       "short_name": "Bíblia",
       "description": "Ler a Bíblia Sagrada",
       "url": "/biblia",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Devocional",
       "short_name": "Devocional",
       "description": "Devocional do dia",
       "url": "/devocional",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Escola Sabatina",
       "short_name": "Lição",
       "description": "Lição da Escola Sabatina",
       "url": "/escola-sabatina",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Ellen White",
       "short_name": "Ellen White",
       "description": "Livros de Ellen White",
       "url": "/ellen-white",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Hinário",
       "short_name": "Hinário",
       "description": "Hinário Adventista",
       "url": "/hinario",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Quiz",
       "short_name": "Quiz",
       "description": "Quiz Bíblico",
       "url": "/quiz",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
     }
   ],
   "prefer_related_applications": false
