🎨🔧 Logo no cabeçalho/rodapé + Ícone PWA reto + Correção 404
✨ Logo Adicionada:
- Cabeçalho: Logo no canto esquerdo com link para home
- Rodapé: Logo grande com nome 'Adventista Play'
- Animações: Hover com scale 1.1 e rotate
- Efeito: Texto muda para amarelo no hover

🎯 Ícone PWA Corrigido:
- Logo agora está COMPLETAMENTE RETA
- Sem distorção ou inclinação
- Todos os 10 tamanhos regenerados
- Qualidade LANCZOS para melhor resultado

🐛 Erro 404 Corrigido:
- Atualizado vercel.json com rotas mais robustas
- Adicionado buildCommand e outputDirectory
- Rotas específicas para assets e src
- Fallback para index.html em todas as rotas
- Tratamento de imagens (png, jpg, svg, etc)

📱 Funcionalidades:
- Logo clicável volta para home
- Animação suave no hover
- Design responsivo
- Cores da identidade visual

🎨 Design:
- Logo 12x12 no cabeçalho
- Logo 16x16 no rodapé
- Gradiente verde/azul mantido
- Rotação 360° no hover do rodapé

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -7,7 +10,16 @@
   ],
   "routes": [
     {
-      "handle": "filesystem"
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/src/(.*)",
+      "dest": "/src/$1"
+    },
+    {
+      "src": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|webp|woff|woff2|ttf|eot))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
@@ -16,7 +28,7 @@
   ],
   "headers": [
     {
-      "source": "/(.*)  ",
+      "source": "/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
