fix: Adiciona script customizado de instalação para Netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,14 @@
 # Migrado do Vercel para Netlify
 
 [build]
-  # Comando de build do Vite
-  command = "npm run build"
+  # Comando de instalação customizado
+  command = "bash netlify-install.sh && npm run build"
   
   # Diretório de publicação (onde o Vite gera os arquivos)
   publish = "dist"
+  
+  # Ignorar comando de instalação padrão do Netlify
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF"
   
   # Variáveis de ambiente do build
   [build.environment]
