--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -12,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@mercadopago/sdk-react": "^1.0.6",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-aspect-ratio": "^1.1.6",
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@sentry/react": "^10.22.0",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
@@ -49,6 +50,7 @@
     "framer-motion": "^12.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
+    "mercadopago": "^2.9.0",
     "next-themes": "^0.4.6",
     "pretender": "^3.4.7",
     "react": "^18.2.0",
