--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.15.0",
+    "i18next": "^25.7.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "mercadopago": "^2.9.0",
@@ -59,6 +60,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^16.5.3",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.15.3",
