--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "globals": "^16.0.0",
     "terser": "^5.44.1",
     "tw-animate-css": "^1.2.9",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
